# ChangeLog for dev-python/lettuce
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild,
  lettuce-0.1.35.ebuild:
  Switched to python-distutils-ng eclass.

*lettuce-0.1.35 (07 Apr 2012)

  07 Apr 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.1.35.ebuild:
  Version bump [582].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Removed Python 2.4 support.

  02 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Keyworded amd64.

  02 Mar 2012; James Rowe <jnrowe@gmail.com> -lettuce-0.1.33.ebuild,
  lettuce-0.1.34.ebuild:
  Keyworded x86.

*lettuce-0.1.34 (01 Feb 2012)

  01 Feb 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.1.34.ebuild:
  Version bump [532].

  18 Nov 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.32.ebuild,
  lettuce-0.1.33.ebuild:
  Keyworded x86.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.33.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*lettuce-0.1.33 (19 Oct 2011)

  19 Oct 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.33.ebuild:
  Version bump [473].

  26 Sep 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.31.ebuild,
  lettuce-0.1.32.ebuild:
  Keyworded x86.

  26 Sep 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.32.ebuild:
  Keyworded amd64.

  18 Sep 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.27.ebuild,
  lettuce-0.1.31.ebuild:
  Keyworded x86.

  17 Sep 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.31.ebuild:
  Keyworded amd64.

*lettuce-0.1.32 (27 Aug 2011)

  27 Aug 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.32.ebuild:
  Version bump [460].

*lettuce-0.1.31 (18 Aug 2011)
